--- a/prometheus.yml
+++ b/prometheus.yml
@@ -23,5 +23,5 @@ scrape_configs:
          # metrics_path defaults to '/metrics'
          # scheme defaults to 'http'.
     static_configs:
-      - targets: ['127.0.0.1:9323'] # Metrics address from our daemon.json file.
+      - targets: ['127.0.0.1:9323'] # Metrics address from my daemon.json file.
   
